# srs-native-sdk-linux

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: conductor.cpp  conductor.h  main.cpp  peer_connection_client.cpp  peer_connection_client.h  srs_client.cpp  srs_client.h
